--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
       <h2>score: 0</h2>
       <div class="turtle"></div>
       <div class="btn-container" style="display: flex; gap: 2rem; justify-content: space-between;width: 100%;">
-        <button id="left-btn" class="btn-controller disable-dbl-tap-zoom"><</button>
-        <button id="right-btn" class="btn-controller disable-dbl-tap-zoom">></button>
+        <button id="left-btn" class="btn-controller disable-dbl-tap-zoom">⬅️</button>
+        <button id="right-btn" class="btn-controller disable-dbl-tap-zoom">➡️</button>
       </div>
     </div>
     <script src="./main.js"></script>
@@ -32,7 +32,7 @@
     .start{
       width: 100vw;
       height: 100%;
-      background: #222;
+      background: #4e1f49;
       display: flex;
       align-items: center;
       justify-content: center;
