--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
       background: url("https://www.shutterstock.com/shutterstock/videos/1028600570/thumb/1.jpg");
       margin: auto;
       display: none;
+      overflow: hidden;
     }
     .turtle{
       background: url("https://scontent.xx.fbcdn.net/v/t1.15752-9/436421366_2097076694040397_2531347803155100938_n.png?_nc_cat=108&ccb=1-7&_nc_sid=5f2048&_nc_ohc=rZSErAaC2U0Ab6k5_y9&_nc_oc=AdjD1MeImZ95Z77QPwsfP5ZiXnohNInh1m6g0HLQoHVrJcy5qn1OGKCe4MKeEBGVxSI1_Z4SCB_ov9LX2EwiYzV2&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.xx&oh=03_Q7cD1QHyXhBIJ6VWTJ05SEe6gVtGumrVD5UY8HYneQPgr5uTKg&oe=664B1885");
