--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     
     <div class="board">
       <h1>car game</h1>
-      <h2>score: 0</h2>
+      <h2>Score: <span id="score" class="score">0</span></h2> 
+      <h2>Timer: <span id="timer" class="timer"> 0 </span>
+      </h2>
       <div class="turtle"></div>
       <div class="btn-container" style="display: flex; gap: 2rem; justify-content: space-between;width: 100%;">
         <button id="left-btn" class="btn-controller disable-dbl-tap-zoom"><svg xmlns="http://www.w3.org/2000/svg" width="64" height="64" fill="#5a6478" viewBox="0 0 256 256"><path d="M208,32H48A16,16,0,0,0,32,48V208a16,16,0,0,0,16,16H208a16,16,0,0,0,16-16V48A16,16,0,0,0,208,32ZM168,136H107.31l18.35,18.34a8,8,0,0,1-11.32,11.32l-32-32a8,8,0,0,1,0-11.32l32-32a8,8,0,0,1,11.32,11.32L107.31,120H168a8,8,0,0,1,0,16Z"></path></svg></button>
