--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
       <h1>car game</h1>
       <h2>Score: <span id="score" class="score">0</span></h2> 
       <h2>Timer: <span id="timer" class="timer"> 0 </span>
+      <br>
+      <button id="pause" class="pause-btn">
+        Pause
+      </button>
       </h2>
       <div class="turtle"></div>
       <div class="btn-container" style="display: flex; gap: 2rem; justify-content: space-between;width: 100%;">
