--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
         Start
       </button>
     </div>
-    
+    <div class="game-over">
+      <h1>Game Over</h1>
+      <h2>Score: <span id="finalScore" class="score final-score">0</span></h2>
+    </div>
     <div class="board">
       <h1>car game</h1>
       <h2>Score: <span id="score" class="score">0</span></h2> 
@@ -44,6 +47,15 @@
       justify-content: center;
       /* display: none; */
     }
+    .game-over{
+      width: 100vw;
+      height: 100%;
+      background: #4e1f49;
+      display: none;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
+    }
     .start-btn{
       font-size: 62px;
       background: transparent;
@@ -62,21 +74,22 @@
       overflow: hidden;
     }
     .turtle{
-      background: url("https://scontent.xx.fbcdn.net/v/t1.15752-9/436421366_2097076694040397_2531347803155100938_n.png?_nc_cat=108&ccb=1-7&_nc_sid=5f2048&_nc_ohc=rZSErAaC2U0Ab6k5_y9&_nc_oc=AdjD1MeImZ95Z77QPwsfP5ZiXnohNInh1m6g0HLQoHVrJcy5qn1OGKCe4MKeEBGVxSI1_Z4SCB_ov9LX2EwiYzV2&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.xx&oh=03_Q7cD1QHyXhBIJ6VWTJ05SEe6gVtGumrVD5UY8HYneQPgr5uTKg&oe=664B1885");
-      width: 180;
-      height: 180;
+      background: url("./img/turtle.png");
+      background-position: -35;
+      width: 80;
+      height: 160;
       position: absolute;
       bottom: 200;
       left: 350;
     }
     .car{
       background: url("./img/carImg.png");
-      width: 180;
-      height: 180;
-      background-size: contain;
+      background-size: cover;
+      background-position: -44;
+      width: 80;
+      height: 170;
       position: absolute;
       top: -400;
-      /* left: 300; */
       transform: rotate(180deg);
     }
     .btn-container{
