--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </div>
     <div class="game-over">
       <h1>Game Over</h1>
-      <h2>Score: <span id="finalScore" class="score final-score">0</span></h2>
+      <h2>Score: <span id="finalScore" class="final-score">0</span></h2>
     </div>
     <div class="board">
       <h1>car game</h1>
